feat: add secure team invitations
